# hub-skills

./: .gitignore  README.md  pyproject.toml
agent_skill_hub/adapters/: __init__.py  openai.py
agent_skill_hub/auto_config/: __init__.py  configurator.py  discovery.py  startup.py
agent_skill_hub/cli/: main.py
agent_skill_hub/core/: __init__.py  loader.py  runner.py  types.py
agent_skill_hub/mcp_server/: server.py
agent_skill_hub/sdk/: __init__.py  helpers.py
skills/base64_codec/: handler.py  skill.json
skills/code_metrics/: handler.py  skill.json
skills/code_smell/: handler.py  skill.json
skills/dead_code/: handler.py  skill.json
skills/diff_review/: handler.py  skill.json
skills/docstring_check/: handler.py  skill.json
skills/echo/: handler.py  skill.json
skills/hash_gen/: handler.py  skill.json
skills/http_request/: handler.py  skill.json
skills/import_analyzer/: handler.py  skill.json
skills/json_transform/: handler.py  skill.json
skills/jwt_decode/: handler.py  skill.json
skills/naming_check/: handler.py  skill.json
skills/port_check/: handler.py  skill.json
skills/regex_test/: handler.py  skill.json
skills/security_scan/: handler.py  skill.json
skills/timestamp_convert/: handler.py  skill.json
skills/uuid_gen/: handler.py  skill.json
